--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0px;
-  background: repeating-radial-gradient(circle, #0086b3, #0086b3 10px, #0099cc 10px, #0099cc 20px);
+  background: repeating-radial-gradient(circle, #0086B3, #0086B3 10px, #0099CC 10px, #0099CC 20px);
   font-family: Courier, monospace;
   text-align:  center;
 }
@@ -12,7 +12,7 @@ body {
   padding: 25px;
   border: 0;
   margin: 0 auto;
-  background: linear-gradient(to bottom, #000000, #0080b3 90%, #0086b3);
+  background: linear-gradient(to bottom, #000000, #0080B3 90%, #0086B3);
   }
 
 .logo {
@@ -75,7 +75,7 @@ a.content {
 
 a.content:hover {
     text-decoration: none;
-    color: #1ac6ff;
+    color: #1AC6FF;
     }
 
 a.content-l2 {
@@ -85,7 +85,7 @@ a.content-l2 {
 
 a.content-l2:hover {
   text-decoration: none;
-  color: #1ac6ff;
+  color: #1AC6FF;
   }
 
 .container-slog {
@@ -561,7 +561,7 @@ span.underline {
   padding: 25px 25px 15px;
   border: 0;
   margin: 0 auto;
-  background: clear;
+  background: transparent;
   color: white;
   font-size: 11pt;
   text-align: center;
