--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ a.content-l2:hover {
   width: 100%;
   max-width: 700px;
   height: 330px;
-  padding: 30px 35px 20px 60px;
+  padding: 0px 0px 20px 0px;
   border: 0;
   margin: 0 auto;
   text-align: left;
@@ -171,7 +171,7 @@ a.content-l2:hover {
 .container-about {
   width: 100%;
   max-width: 800px;
-  height: 3730px;
+  height: 3675px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -354,7 +354,7 @@ span.underline {
 .container-poem5 {
   width: 100%;
   max-width: 800px;
-  height: 550px;
+  height: 495px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -380,7 +380,7 @@ span.underline {
 .container-poem6 {
   width: 100%;
   max-width: 800px;
-  height: 675px;
+  height: 180px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -392,6 +392,58 @@ span.underline {
   }
 
   .p6 {
+  max-width: 140px;
+  height: 45px;
+  padding: 10px 15px 10px 25px;
+  border: 0;
+  margin: 0 auto;
+  text-align: left;
+  line-height: 0.55em;
+  background: #F9FFFF;
+  color: #000000;
+  }
+
+.container-poem7 {
+  width: 100%;
+  max-width: 800px;
+  height: 240px;
+  padding: 25px;
+  border: 0;
+  margin: 0 auto;
+  background: #F9FFFF;
+  text-align: center;
+  line-height: 0.5em;
+  font-size: 11pt;
+  color: #3C3C3C;
+  }
+
+  .p7 {
+  max-width: 230px;
+  height: 45px;
+  padding: 10px 15px 10px 45px;
+  border: 0;
+  margin: 0 auto;
+  text-align: left;
+  line-height: 0.55em;
+  background: #F9FFFF;
+  color: #000000;
+  }
+
+.container-poem8 {
+  width: 100%;
+  max-width: 800px;
+  height: 675px;
+  padding: 25px;
+  border: 0;
+  margin: 0 auto;
+  background: #F9FFFF;
+  text-align: center;
+  line-height: 0.5em;
+  font-size: 11pt;
+  color: #3C3C3C;
+  }
+
+  .p8 {
   max-width: 155px;
   height: 300px;
   padding: 10px 15px 10px 30px;
@@ -403,7 +455,7 @@ span.underline {
   color: #000000;
   }
 
-.container-poem7 {
+.container-poem9 {
   width: 100%;
   max-width: 800px;
   height: 735px;
@@ -417,7 +469,7 @@ span.underline {
   color: #3C3C3C;
   }
 
-  .p7 {
+  .p9 {
   max-width: 155px;
   height: 300px;
   padding: 10px 15px 10px 30px;
@@ -429,7 +481,7 @@ span.underline {
   color: #000000;
   }
 
-.container-poem8 {
+.container-poem10 {
   width: 100%;
   max-width: 800px;
   height: 400px;
@@ -443,7 +495,7 @@ span.underline {
   color: #3C3C3C;
   }
 
-  .p8 {
+  .p10 {
   max-width: 105px;
   height: 245px;
   padding: 10px 15px 10px 25px;
@@ -455,10 +507,10 @@ span.underline {
   color: #000000;
   }
 
-.container-poem9 {
+.container-poem11 {
   width: 100%;
   max-width: 800px;
-  height: 330px;
+  height: 320px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -469,7 +521,7 @@ span.underline {
   color: #3C3C3C;
   }
 
-  .p9 {
+  .p11 {
   max-width: 95px;
   height: 120px;
   padding: 10px 15px 10px 30px;
@@ -481,10 +533,10 @@ span.underline {
   color: #000000;
   }
 
-.container-poem10 {
+.container-poem12 {
   width: 100%;
   max-width: 800px;
-  height: 730px;
+  height: 710px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -495,7 +547,7 @@ span.underline {
   color: #3C3C3C;
   }
 
-.p10 {
+  .p12 {
   max-width: 180px;
   height: 430px;
   padding: 10px 15px 10px 40px;
