--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ span.underline {
 .container-poem9 {
   width: 100%;
   max-width: 800px;
-  height: 240px;
+  height: 180px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -484,7 +484,7 @@ span.underline {
 .container-poem10 {
   width: 100%;
   max-width: 800px;
-  height: 675px;
+  height: 235px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -496,9 +496,9 @@ span.underline {
   }
 
   .p10 {
-  max-width: 155px;
-  height: 300px;
-  padding: 10px 15px 10px 30px;
+  max-width: 200px;
+  height: 45px;
+  padding: 10px 10px 10px 45px;
   border: 0;
   margin: 0 auto;
   text-align: left;
@@ -510,7 +510,7 @@ span.underline {
 .container-poem11 {
   width: 100%;
   max-width: 800px;
-  height: 735px;
+  height: 675px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -536,7 +536,7 @@ span.underline {
 .container-poem12 {
   width: 100%;
   max-width: 800px;
-  height: 400px;
+  height: 735px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -548,9 +548,9 @@ span.underline {
   }
 
   .p12 {
-  max-width: 105px;
-  height: 245px;
-  padding: 10px 15px 10px 25px;
+  max-width: 155px;
+  height: 300px;
+  padding: 10px 15px 10px 30px;
   border: 0;
   margin: 0 auto;
   text-align: left;
@@ -562,7 +562,7 @@ span.underline {
 .container-poem13 {
   width: 100%;
   max-width: 800px;
-  height: 320px;
+  height: 400px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -574,9 +574,9 @@ span.underline {
   }
 
   .p13 {
-  max-width: 95px;
-  height: 120px;
-  padding: 10px 15px 10px 30px;
+  max-width: 105px;
+  height: 245px;
+  padding: 10px 15px 10px 25px;
   border: 0;
   margin: 0 auto;
   text-align: left;
@@ -586,6 +586,32 @@ span.underline {
   }
 
 .container-poem14 {
+  width: 100%;
+  max-width: 800px;
+  height: 315px;
+  padding: 25px;
+  border: 0;
+  margin: 0 auto;
+  background: #F9FFFF;
+  text-align: center;
+  line-height: 0.5em;
+  font-size: 11pt;
+  color: #3C3C3C;
+  }
+
+  .p14 {
+  max-width: 95px;
+  height: 120px;
+  padding: 10px 15px 5px 30px;
+  border: 0;
+  margin: 0 auto;
+  text-align: left;
+  line-height: 0.55em;
+  background: #F9FFFF;
+  color: #000000;
+  }
+
+.container-poem15 {
   width: 100%;
   max-width: 800px;
   height: 710px;
@@ -599,7 +625,7 @@ span.underline {
   color: #3C3C3C;
   }
 
-  .p14 {
+  .p15 {
   max-width: 180px;
   height: 430px;
   padding: 10px 15px 10px 40px;
