--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ span.underline {
   .p1 {
   max-width: 400px;
   height: 135px;
-  padding: 10px 5px 10px 27px;
+  padding: 10px 25px 10px 23px;
   border: 0;
   margin: 0 auto;
   text-align: left;
@@ -640,7 +640,7 @@ span.underline {
 .container-poem16 {
   width: 100%;
   max-width: 800px;
-  height: 645px;
+  height: 642px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -666,7 +666,7 @@ span.underline {
 .container-poem17 {
   width: 100%;
   max-width: 800px;
-  height: 262px;
+  height: 203px;
   padding: 25px;
   border: 0;
   margin: 0 auto;
@@ -681,6 +681,32 @@ span.underline {
   max-width: 335px;
   height: 60px;
   padding: 2px 10px 5px 15px;
+  border: 0;
+  margin: 0 auto;
+  text-align: left;
+  line-height: 0.55em;
+  background: #F9FFFF;
+  color: #000000;
+  }
+
+.container-poem18 {
+  width: 100%;
+  max-width: 800px;
+  height: 680px;
+  padding: 25px;
+  border: 0;
+  margin: 0 auto;
+  background: #F9FFFF;
+  text-align: center;
+  line-height: 0.5em;
+  font-size: 11pt;
+  color: #3C3C3C;
+  }
+
+  .p18 {
+  max-width: 280px;
+  height: 390px;
+  padding: 5px 5px 3px 23px;
   border: 0;
   margin: 0 auto;
   text-align: left;
